--- a/README
+++ b/README
@@ -1,15 +1,17 @@
-Minebound is a web app that helps coordinate a special version of the Minecraft multiplayer server. Only one player is allowed in the game at a time, and the webapp portion communicates with the Minecraft server via Splash (http://www.github.com/ckolderup/Splash) and SSH to keep track of which Minecraft user is allowed in the server at any given time.
+Lonecraft is a web app that helps coordinate a special version of the Minecraft multiplayer server. Only one player is allowed in the game at a time, and the webapp portion communicates with the Minecraft server via Splash (http://www.github.com/ckolderup/Splash) and SSH to keep track of which Minecraft user is allowed in the server at any given time.
 
-Minebound is a work in progress.
+Lonecraft is a work in progress.
 
 Things completed:
   - basic user account management
   - general site pages/navigation established
+  - basic game logic (cashing in game tokens, communicating with the minecraft server)
 
 Things to do:
-  - actual game logic (cashing in game tokens, communicating with the minecraft server)
+  - nail down game logic & test that flow
+  - blogging support so you can write about games you've played in and a cohesive story of past games can be viewed
+  - admin control panel to manually kickstart games and manage the archive of past games for download
   - secure auth
   - secure Splash communications (requires work on Splash as well)
   - "confirm" step on user account signup
-  - admin control panel to manually kickstart games and manage the archive of past games for download
   - a lot of style work :)
